--- a/labs/lab3/.gitignore
+++ b/labs/lab3/.gitignore
@@ -41,3 +41,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# .env
+# env.g.dart
+google-services.json
+GoogleService-Info.plist
+.env
+env.g.dart
