--- a/labs/lab3/pubspec.yaml
+++ b/labs/lab3/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.25.4
   envied: ^0.5.3
+  cloud_firestore: ^4.15.5
+  firebase_auth: ^4.17.4
+  firebase_storage: ^11.6.6
 
 dev_dependencies:
   flutter_test:
