--- a/labs/lab3/pubspec.yaml
+++ b/labs/lab3/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.25.4
   firebase_auth: ^4.17.5
   intl: ^0.19.0
+  calendar_view: ^1.0.4
 
 dev_dependencies:
   flutter_test:
