--- a/labs/lab3/pubspec.yaml
+++ b/labs/lab3/pubspec.yaml
@@ -39,15 +39,16 @@ dependencies:
   firebase_auth: ^5.0.0
   intl: ^0.19.0
   calendar_view: ^1.0.4
-  flutter_polyline_points: ^2.0.0
   google_maps_flutter: ^2.6.1
+  flutter_polyline_points: ^1.0.0
   location: ^6.0.2
-  flutter_svg: ^2.0.10+1
+  flutter_svg: 2.0.9
   envied: ^0.5.4+1
   flutter_dotenv: ^5.1.0
   geocoding: ^3.0.0
   geolocator: ^12.0.0
   provider: ^6.1.2
+  flutter_local_notifications: ^17.2.2
 
 dev_dependencies:
   flutter_test:
