--- a/labs/lab3/android/app/src/main/AndroidManifest.xml
+++ b/labs/lab3/android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:value="2" />
         <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyCZscN8VsFG7Jzv7DV1ELkIlzVFA5gqzXY" />
+        android:value="YOUR_API_KEY" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility?hl=en and
